Added extractedWorkShifts method in DataDriver class
Using this method we can read data from an excel table by excepting the column header names.

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--707599141\testng-customsuite.xml</span>
+                    <span>C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-476146672\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,32 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test Job Category 07)">test(Test Job Category 07)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test_Shift 03, 12:15, 18:45, Dominic Chase)">test(Test_Shift 03, 12:15, 18:45, Dominic Chase)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test Job Category 05)">test(Test Job Category 05)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">test(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test Job Category 06)">test(Test Job Category 06)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test_Shift 02, 9:15, 16:00, Kallyani Bhute)">test(Test_Shift 02, 9:15, 16:00, Kallyani Bhute)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test Job Category 02)">test(Test Job Category 02)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test_Shift 05, 07:45, 19:45, David Morris)">test(Test_Shift 05, 07:45, 19:45, David Morris)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test Job Category 04)">test(Test Job Category 04)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test Job Category 03)">test(Test Job Category 03)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.maven.testng.TempClass" class="method navigator-link" hash-for-method="test(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">test(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -152,50 +147,42 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test(Test Job Category 07)">
-                  </a> <!-- test(Test Job Category 07) -->
+                  <a name="test(Test_Shift 03, 12:15, 18:45, Dominic Chase)">
+                  </a> <!-- test(Test_Shift 03, 12:15, 18:45, Dominic Chase) -->
                   <span class="method-name">test</span>
-                  <span class="parameters">(Test Job Category 07)</span>
+                  <span class="parameters">(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test(Test Job Category 05)">
-                  </a> <!-- test(Test Job Category 05) -->
+                  <a name="test(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">
+                  </a> <!-- test(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson) -->
                   <span class="method-name">test</span>
-                  <span class="parameters">(Test Job Category 05)</span>
+                  <span class="parameters">(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test(Test Job Category 06)">
-                  </a> <!-- test(Test Job Category 06) -->
+                  <a name="test(Test_Shift 02, 9:15, 16:00, Kallyani Bhute)">
+                  </a> <!-- test(Test_Shift 02, 9:15, 16:00, Kallyani Bhute) -->
                   <span class="method-name">test</span>
-                  <span class="parameters">(Test Job Category 06)</span>
+                  <span class="parameters">(Test_Shift 02, 9:15, 16:00, Kallyani Bhute)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test(Test Job Category 02)">
-                  </a> <!-- test(Test Job Category 02) -->
+                  <a name="test(Test_Shift 05, 07:45, 19:45, David Morris)">
+                  </a> <!-- test(Test_Shift 05, 07:45, 19:45, David Morris) -->
                   <span class="method-name">test</span>
-                  <span class="parameters">(Test Job Category 02)</span>
+                  <span class="parameters">(Test_Shift 05, 07:45, 19:45, David Morris)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test(Test Job Category 04)">
-                  </a> <!-- test(Test Job Category 04) -->
+                  <a name="test(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">
+                  </a> <!-- test(Test_Shift 04, 10:30, 20:15, Nathan Elliot) -->
                   <span class="method-name">test</span>
-                  <span class="parameters">(Test Job Category 04)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test(Test Job Category 03)">
-                  </a> <!-- test(Test Job Category 03) -->
-                  <span class="method-name">test</span>
-                  <span class="parameters">(Test Job Category 03)</span>
+                  <span class="parameters">(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -203,7 +190,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse--707599141\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Prasanga Fernando\AppData\Local\Temp\testng-eclipse-476146672\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -252,19 +239,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test')
 data.setCell(0, 2, 'com.maven.testng.TempClass')
-data.setCell(0, 3, 4);
+data.setCell(0, 3, 9);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'test')
 data.setCell(1, 2, 'com.maven.testng.TempClass')
-data.setCell(1, 3, 1);
+data.setCell(1, 3, 2);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test')
 data.setCell(2, 2, 'com.maven.testng.TempClass')
-data.setCell(2, 3, 1);
+data.setCell(2, 3, 2);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'test')
 data.setCell(3, 2, 'com.maven.testng.TempClass')
@@ -272,16 +259,12 @@ data.setCell(3, 3, 1);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'test')
 data.setCell(4, 2, 'com.maven.testng.TempClass')
-data.setCell(4, 3, 0);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'test')
-data.setCell(5, 2, 'com.maven.testng.TempClass')
-data.setCell(5, 3, 0);
+data.setCell(4, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 ms</span>
+              <span class="suite-total-time">Total running time: 15 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -309,28 +292,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.TempClass</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">test(Test Job Category 02)</span>
+                <span class="method-name">test(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">test(Test Job Category 03)</span>
-                <span class="method-start">7 ms</span>
+                <span class="method-name">test(Test_Shift 02, 9:15, 16:00, Kallyani Bhute)</span>
+                <span class="method-start">15 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">test(Test Job Category 04)</span>
-                <span class="method-start">8 ms</span>
+                <span class="method-name">test(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
+                <span class="method-start">18 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">test(Test Job Category 05)</span>
-                <span class="method-start">9 ms</span>
+                <span class="method-name">test(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
+                <span class="method-start">22 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">test(Test Job Category 06)</span>
-                <span class="method-start">11 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test(Test Job Category 07)</span>
-                <span class="method-start">13 ms</span>
+                <span class="method-name">test(Test_Shift 05, 07:45, 19:45, David Morris)</span>
+                <span class="method-start">26 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
