--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -53,6 +53,10 @@
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>aaa</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 </table>
