--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/15 10:49:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@13f95696]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20156341</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/15 10:49:24</td>   <td>7337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@13f95696]">verifyLoginErrorMessage</td> 
-  <td>main@20156341</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/15 10:49:25</td>   <td>9018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@13f95696]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@20156341</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/15 10:49:30</td>   <td>13923</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@cd1d761]">&gt;&gt;navigateToWorkShifts</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20156341</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/15 10:49:33</td>   <td>16856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1()[pri:0, instance:com.maven.testng.VerifyWorkShifts@cd1d761]">test1</td> 
-  <td>main@20156341</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/15 10:49:34</td>   <td>17365</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@13f95696]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20156341</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/17 19:45:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/17 19:45:07</td>   <td>5413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginErrorMessage</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/17 19:45:08</td>   <td>7104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:14</td>   <td>12912</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&gt;&gt;navigateToWorkShifts</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:18</td>   <td>16590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:20</td>   <td>18897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:22</td>   <td>20770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:22</td>   <td>20969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:24</td>   <td>22757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:26</td>   <td>25012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:28</td>   <td>26837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:30</td>   <td>29226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:32</td>   <td>30954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/17 19:45:34</td>   <td>33317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/17 19:45:37</td>   <td>35911</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
 </table>
