--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/16 09:06:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
-  <td>main@776700275</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/16 09:06:20</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
-  <td>main@776700275</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/16 09:06:20</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
-  <td>main@776700275</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/16 09:06:20</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
-  <td>main@776700275</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/16 09:06:20</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
-  <td>main@776700275</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:47</td>   <td>-334</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&gt;&gt;navigateToWorkShifts</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@221861886</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
+  <td>main@221861886</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
+  <td>main@221861886</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
+  <td>main@221861886</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
+  <td>main@221861886</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
+  <td>main@221861886</td>   <td></td> </tr>
 </table>
