--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,27 +104,27 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="test1(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">test1(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="test1(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">test1(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="test1(Test_Shift 03, 12:15, 18:45, Dominic Chase)">test1(Test_Shift 03, 12:15, 18:45, Dominic Chase)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="test1(Test_Shift 05, 07:45, 19:45, David Morris)">test1(Test_Shift 05, 07:45, 19:45, David Morris)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)">verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="test1(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">test1(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyWorkShifts" class="method navigator-link" hash-for-method="verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)">verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -157,42 +157,42 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test1(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">
-                  </a> <!-- test1(Test_Shift 04, 10:30, 20:15, Nathan Elliot) -->
-                  <span class="method-name">test1</span>
+                  <a name="verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
+                  <span class="parameters">(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
                   <span class="parameters">(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test1(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">
-                  </a> <!-- test1(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson) -->
-                  <span class="method-name">test1</span>
+                  <a name="verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
                   <span class="parameters">(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test1(Test_Shift 03, 12:15, 18:45, Dominic Chase)">
-                  </a> <!-- test1(Test_Shift 03, 12:15, 18:45, Dominic Chase) -->
-                  <span class="method-name">test1</span>
-                  <span class="parameters">(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test1(Test_Shift 05, 07:45, 19:45, David Morris)">
-                  </a> <!-- test1(Test_Shift 05, 07:45, 19:45, David Morris) -->
-                  <span class="method-name">test1</span>
+                  <a name="verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
                   <span class="parameters">(Test_Shift 05, 07:45, 19:45, David Morris)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="test1(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)">
-                  </a> <!-- test1(Test_Shift 02, 10:00, 16:00, Kallyani Bhute) -->
-                  <span class="method-name">test1</span>
-                  <span class="parameters">(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
+                  <a name="verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)">
+                  </a> <!-- verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase) -->
+                  <span class="method-name">verifyAddWorkShifts</span>
+                  <span class="parameters">(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -276,36 +276,36 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5350);
+data.setCell(0, 3, 5551);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test1')
-data.setCell(1, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(1, 3, 2825);
+data.setCell(1, 1, 'verifyLoginErrorMessage')
+data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(1, 3, 1677);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test1')
+data.setCell(2, 1, 'verifyAddWorkShifts')
 data.setCell(2, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(2, 3, 2373);
+data.setCell(2, 3, 1636);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test1')
+data.setCell(3, 1, 'verifyAddWorkShifts')
 data.setCell(3, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(3, 3, 2308);
+data.setCell(3, 3, 1610);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'test1')
+data.setCell(4, 1, 'verifyAddWorkShifts')
 data.setCell(4, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(4, 3, 2287);
+data.setCell(4, 3, 1608);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'test1')
+data.setCell(5, 1, 'verifyAddWorkShifts')
 data.setCell(5, 2, 'com.maven.testng.VerifyWorkShifts')
-data.setCell(5, 3, 2190);
+data.setCell(5, 3, 1593);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyLoginErrorMessage')
-data.setCell(6, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(6, 3, 1759);
+data.setCell(6, 1, 'verifyAddWorkShifts')
+data.setCell(6, 2, 'com.maven.testng.VerifyWorkShifts')
+data.setCell(6, 3, 1532);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -338,65 +338,45 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4328 ms</span>
+                <span class="method-start">4639 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">6090 ms</span>
+                <span class="method-start">6320 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyWorkShifts</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">navigateToWorkShifts</span>
-                <span class="method-start">11442 ms</span>
+                <span class="method-start">11874 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">test1(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
-                <span class="method-start">14364 ms</span>
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 01, 08:00, 13:30, Peter Mac Anderson)</span>
+                <span class="method-start">15207 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">aaa</span>
-                <span class="method-start">17191 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">test1(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
-                <span class="method-start">19134 ms</span>
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 02, 10:00, 16:00, Kallyani Bhute)</span>
+                <span class="method-start">16818 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">aaa</span>
-                <span class="method-start">21508 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">test1(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
-                <span class="method-start">23362 ms</span>
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 03, 12:15, 18:45, Dominic Chase)</span>
+                <span class="method-start">18455 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">aaa</span>
-                <span class="method-start">25671 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">test1(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
-                <span class="method-start">27552 ms</span>
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 04, 10:30, 20:15, Nathan Elliot)</span>
+                <span class="method-start">20064 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">aaa</span>
-                <span class="method-start">29839 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">test1(Test_Shift 05, 07:45, 19:45, David Morris)</span>
-                <span class="method-start">31658 ms</span>
+                <span class="method-name">verifyAddWorkShifts(Test_Shift 05, 07:45, 19:45, David Morris)</span>
+                <span class="method-start">21658 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">aaa</span>
-                <span class="method-start">33850 ms</span>
-              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">35657 ms</span>
+                <span class="method-start">23191 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
