--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -37,7 +37,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1</td>
+<td>verifyAddWorkShifts</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -52,10 +52,6 @@
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>aaa</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
