--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,34 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:24:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:25:01</td>   <td>4323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginErrorMessage</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:25:03</td>   <td>6085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:08</td>   <td>11437</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&gt;&gt;navigateToWorkShifts</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:11</td>   <td>14359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:14</td>   <td>17186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:16</td>   <td>19128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:18</td>   <td>21503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:20</td>   <td>23357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:22</td>   <td>25666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:24</td>   <td>27547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:26</td>   <td>29835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:28</td>   <td>31653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">test1</td> 
-  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/18 10:25:30</td>   <td>33845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@758705fa]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:25:32</td>   <td>35652</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:36:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@68be8808]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:36:35</td>   <td>4631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@68be8808]">verifyLoginErrorMessage</td> 
+  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:36:37</td>   <td>6312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@68be8808]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/18 10:36:42</td>   <td>11866</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@32193bea]">&gt;&gt;navigateToWorkShifts</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/18 10:36:46</td>   <td>15199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@32193bea]">verifyAddWorkShifts</td> 
+  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/18 10:36:47</td>   <td>16810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@32193bea]">verifyAddWorkShifts</td> 
+  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/18 10:36:49</td>   <td>18447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@32193bea]">verifyAddWorkShifts</td> 
+  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/18 10:36:50</td>   <td>20056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@32193bea]">verifyAddWorkShifts</td> 
+  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/18 10:36:52</td>   <td>21650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.verifyAddWorkShifts(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@32193bea]">verifyAddWorkShifts</td> 
+  <td>main@1509309988</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/18 10:36:53</td>   <td>23183</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@68be8808]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1509309988</td>   <td></td> </tr>
 </table>
