--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -37,6 +37,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyAddLocationOnlyWithMandatoryData</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyAddLocationWithAllDataFields</td>
 <td>&nbsp;</td></tr>
 <tr>
