Added data provider method in Data Driver class for
extractedQualificationSkills

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">45,325</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">188</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.maven.testng.VerifyLoginTest</td><td><a href="#m0">verifyLoginErrorMessage</a></td><td rowspan="1">1627453253855</td><td rowspan="1">6283</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginWithCorrectCredentials</a></td><td rowspan="1">1627453260141</td><td rowspan="1">13350</td></tr><tr class="passedodd"><td rowspan="1">com.maven.testng.VerifyQualificationSkills</td><td><a href="#m2">verifyAddSkill</a></td><td rowspan="1">1627453281116</td><td rowspan="1">2223</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.maven.testng.VerifyQualificationSkills</td><td><a href="#m0">dd</a></td><td rowspan="6">1627546203578</td><td rowspan="6">1</td></tr><tr class="passedeven"><td><a href="#m1">dd</a></td></tr><tr class="passedeven"><td><a href="#m2">dd</a></td></tr><tr class="passedeven"><td><a href="#m3">dd</a></td></tr><tr class="passedeven"><td><a href="#m4">dd</a></td></tr><tr class="passedeven"><td><a href="#m5">dd</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.maven.testng.VerifyLoginTest#verifyLoginErrorMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.maven.testng.VerifyLoginTest#verifyLoginWithCorrectCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.maven.testng.VerifyQualificationSkills#verifyAddSkill</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.maven.testng.VerifyQualificationSkills#dd</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>TestSkill0001</td><td>Test Skill Description 0001</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.maven.testng.VerifyQualificationSkills#dd</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>TestSkill0005</td><td>Test Skill Description 0005</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.maven.testng.VerifyQualificationSkills#dd</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>TestSkill0002</td><td>Test Skill Description 0002</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.maven.testng.VerifyQualificationSkills#dd</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>TestSkill0004</td><td>Test Skill Description 0004</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.maven.testng.VerifyQualificationSkills#dd</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>TestSkill0003</td><td>Test Skill Description 0003</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.maven.testng.VerifyQualificationSkills#dd</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Skill Name</td><td>Skill Description</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
