--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,32 +4,24 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.maven.testng.VerifyWorkShifts</td>
+<td>com.maven.testng.VerifyQualificationSkills</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1</td>
+<td>dd</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>navigateToWorkShifts</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>aaa</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
