--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&gt;&gt;navigateToWorkShifts</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@221861886</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
-  <td>main@221861886</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
-  <td>main@221861886</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
-  <td>main@221861886</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
-  <td>main@221861886</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">test1</td> 
-  <td>main@221861886</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/18 10:17:48</td>   <td>374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyWorkShifts.aaa()[pri:0, instance:com.maven.testng.VerifyWorkShifts@7d64e326]">&lt;&lt;aaa</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
+  <td>main@756936249</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
+  <td>main@756936249</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
+  <td>main@756936249</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
+  <td>main@756936249</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
+  <td>main@756936249</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
+  <td>main@756936249</td>   <td></td> </tr>
 </table>
