Add verification point to "VerifyAddEducation" method

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationEducation" class="method navigator-link" hash-for-method="verifyAddEducation">verifyAddEducation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationEducation" class="method navigator-link" hash-for-method="AddEducation">AddEducation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -162,9 +162,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyAddEducation">
-                  </a> <!-- verifyAddEducation -->
-                  <span class="method-name">verifyAddEducation</span>
+                  <a name="AddEducation">
+                  </a> <!-- AddEducation -->
+                  <span class="method-name">AddEducation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -297,35 +297,35 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5411);
+data.setCell(0, 3, 5245);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLoginErrorMessage')
 data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 1741);
+data.setCell(1, 3, 1581);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'verifyAddSkill')
 data.setCell(2, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(2, 3, 1308);
+data.setCell(2, 3, 1452);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'verifyAddSkill')
 data.setCell(3, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(3, 3, 1287);
+data.setCell(3, 3, 1427);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'verifyAddSkill')
 data.setCell(4, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(4, 3, 1191);
+data.setCell(4, 3, 1323);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'verifyAddSkill')
 data.setCell(5, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(5, 3, 1178);
+data.setCell(5, 3, 1323);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'verifyAddSkill')
 data.setCell(6, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(6, 3, 1145);
+data.setCell(6, 3, 1187);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'verifyAddEducation')
+data.setCell(7, 1, 'AddEducation')
 data.setCell(7, 2, 'com.maven.testng.VerifyQualificationEducation')
-data.setCell(7, 3, 1139);
+data.setCell(7, 3, 1145);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -363,56 +363,56 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4550 ms</span>
+                <span class="method-start">3923 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">6294 ms</span>
+                <span class="method-start">5508 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyQualificationSkills</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">navigateToSkills</span>
-                <span class="method-start">11707 ms</span>
+                <span class="method-start">10755 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">verifyAddSkill(TestSkill0001, Test Skill Description 0001)</span>
-                <span class="method-start">14855 ms</span>
+                <span class="method-start">13750 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAddSkill(TestSkill0002, Test Skill Description 0002)</span>
-                <span class="method-start">16143 ms</span>
+                <span class="method-start">15203 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAddSkill(TestSkill0003, Test Skill Description 0003)</span>
-                <span class="method-start">17452 ms</span>
+                <span class="method-start">16390 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAddSkill(TestSkill0004, Test Skill Description 0004)</span>
-                <span class="method-start">18631 ms</span>
+                <span class="method-start">17818 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAddSkill(TestSkill0005, Test Skill Description 0005)</span>
-                <span class="method-start">19823 ms</span>
+                <span class="method-start">19142 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyQualificationEducation</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">navigateToEducation</span>
-                <span class="method-start">20968 ms</span>
+                <span class="method-start">20465 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyAddEducation</span>
-                <span class="method-start">23042 ms</span>
+                <span class="method-name">AddEducation</span>
+                <span class="method-start">22521 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">24183 ms</span>
+                <span class="method-start">23667 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
