--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddEducation</td>
+<td>AddEducation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
