--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -37,11 +37,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>navigate</td>
+<td>VerifyAddLanguage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigate</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
