--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">17,324</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">17,620</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.maven.testng.VerifyLoginTest</td><td><a href="#m0">verifyLoginErrorMessage</a></td><td rowspan="1">1628164547747</td><td rowspan="1">1357</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginWithCorrectCredentials</a></td><td rowspan="1">1628164549107</td><td rowspan="1">5028</td></tr><tr class="passedodd"><td rowspan="1">com.maven.testng.VerifyQualificationLanguages</td><td><a href="#m2">navigate</a></td><td rowspan="1">1628164554139</td><td rowspan="1">3114</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.maven.testng.VerifyLoginTest</td><td><a href="#m0">verifyLoginErrorMessage</a></td><td rowspan="1">1628243168510</td><td rowspan="1">1606</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.maven.testng.VerifyLoginTest</td><td><a href="#m1">verifyLoginWithCorrectCredentials</a></td><td rowspan="1">1628243170121</td><td rowspan="1">4877</td></tr><tr class="passedodd"><td rowspan="1">com.maven.testng.VerifyQualificationLanguages</td><td><a href="#m2">VerifyAddLanguage</a></td><td rowspan="1">1628243178153</td><td rowspan="1">61</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.maven.testng.VerifyLoginTest#verifyLoginErrorMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.maven.testng.VerifyLoginTest#verifyLoginErrorMessage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Invalid credentials] but found [Credenciales no válidas]
+	at com.maven.testng.VerifyLoginTest.verifyLoginErrorMessage(VerifyLoginTest.java:53)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
+... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.maven.testng.VerifyLoginTest#verifyLoginWithCorrectCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.maven.testng.VerifyQualificationLanguages#navigate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.maven.testng.VerifyQualificationLanguages#VerifyAddLanguage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
