--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyLoginTest" class="method navigator-link" hash-for-method="verifyLoginErrorMessage">verifyLoginErrorMessage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +118,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationLanguages" class="method navigator-link" hash-for-method="navigate">navigate</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyLoginTest" class="method navigator-link" hash-for-method="verifyLoginErrorMessage">verifyLoginErrorMessage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationLanguages" class="method navigator-link" hash-for-method="VerifyAddLanguage">VerifyAddLanguage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -129,6 +138,26 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">com.maven.testng.VerifyLoginTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLoginErrorMessage">
+                  </a> <!-- verifyLoginErrorMessage -->
+                  <span class="method-name">verifyLoginErrorMessage</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [Invalid credentials] but found [Credenciales no válidas]
+	at com.maven.testng.VerifyLoginTest.verifyLoginErrorMessage(VerifyLoginTest.java:53)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
+... Removed 33 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -137,9 +166,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="navigate">
-                  </a> <!-- navigate -->
-                  <span class="method-name">navigate</span>
+                  <a name="VerifyAddLanguage">
+                  </a> <!-- VerifyAddLanguage -->
+                  <span class="method-name">VerifyAddLanguage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,13 +179,6 @@
               <span class="class-name">com.maven.testng.VerifyLoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyLoginErrorMessage">
-                  </a> <!-- verifyLoginErrorMessage -->
-                  <span class="method-name">verifyLoginErrorMessage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="verifyLoginWithCorrectCredentials">
@@ -223,20 +245,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5028);
+data.setCell(0, 3, 4877);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'navigate')
-data.setCell(1, 2, 'com.maven.testng.VerifyQualificationLanguages')
-data.setCell(1, 3, 3114);
+data.setCell(1, 1, 'verifyLoginErrorMessage')
+data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(1, 3, 1606);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyLoginErrorMessage')
-data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(2, 3, 1357);
+data.setCell(2, 1, 'VerifyAddLanguage')
+data.setCell(2, 2, 'com.maven.testng.VerifyQualificationLanguages')
+data.setCell(2, 3, 61);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -268,26 +290,32 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">5726 ms</span>
+                <span class="method-start">5841 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">7086 ms</span>
+                <span class="method-start">7452 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyQualificationLanguages</div> <!-- chronological-class-name -->
-              <div class="test-method">
+              <div class="configuration-class before">
                 <span class="method-name">navigate</span>
-                <span class="method-start">12118 ms</span>
+                <span class="method-start">12331 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">VerifyAddLanguage</span>
+                <span class="method-start">15484 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">15233 ms</span>
+                <span class="method-start">15546 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
