--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/08/05 17:25:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/05 17:25:47</td>   <td>5719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginErrorMessage</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/05 17:25:49</td>   <td>7079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/05 17:25:54</td>   <td>12111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLanguages.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@ebaa6cb]">navigate</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/05 17:25:57</td>   <td>15226</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/06 15:16:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@906d29b]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/06 15:16:08</td>   <td>5832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@906d29b]">verifyLoginErrorMessage</td> 
+  <td>main@1631227617</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/06 15:16:10</td>   <td>7442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@906d29b]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@1631227617</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/06 15:16:15</td>   <td>12322</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationLanguages.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@49d3c823]">&gt;&gt;navigate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/06 15:16:18</td>   <td>15475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLanguages.VerifyAddLanguage()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@49d3c823]">VerifyAddLanguage</td> 
+  <td>main@1631227617</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/06 15:16:18</td>   <td>15537</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@906d29b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
 </table>
